--- a/_data/sliders.yml
+++ b/_data/sliders.yml
@@ -46,18 +46,18 @@
   bullets: true
   captions: true
   images:
-    - src: /assets/images/20190110/UpdateConfig.PNG
-      alt: Step 1.) Create username for a GitHub account.
-    - src: /assets/images/20190110/UpdateConfig2.PNG
-      alt: Step 2.) Proove you are a person signing up for an account.
-    - src: /assets/images/20190110/UpdateConfig3a.PNG
-      alt: Step 3.) Select the Free plan.
-    - src: /assets/images/20190110/UpdateConfig3b.PNG
-      alt: Step 4.) Select your interests.
-    - src: /assets/images/20190110/UpdateConfig4.PNG
-      alt: Step 5.) You are now ready to create a new repository.
+    - src: /assets/images/20190110/VerifyBlog.PNG
+      alt: Step 1.) Go to the repository code page.
     - src: /assets/images/20190110/UpdateConfig5.PNG
-      alt: Step 6.) If you have an issue be sure to verify your GitHub account in your email.
+      alt: Step 2.) Scroll down to find the _config.ym file and click the file name.
+    - src: /assets/images/20190110/UpdateConfig2.PNG
+      alt: Step 3.) Select the pencil button to edit the file.
+    - src: /assets/images/20190110/UpdateConfig3.PNG
+      alt: Step 4.) Update the following values, name, email, repository, url, prod_url, github_username.
+    - src: /assets/images/20190110/UpdateConfig3a.PNG
+      alt: Step 5.) Scroll down and update the author value.
+    - src: /assets/images/20190110/UpdateConfig4.PNG
+      alt: Step 6.) Click the green Commit changes button to save the updates.
   settings:
     height: "'auto'"
     effect: "'fade'"
@@ -66,26 +66,14 @@
   bullets: true
   captions: true
   images:
-    - src: /assets/images/20190110/VerifyBlog.PNG
-      alt: Step 1.) Create username for a GitHub account.
-    - src: /assets/images/20190110/VerifyBlog2.PNG
-      alt: Step 2.) Proove you are a person signing up for an account.
+    - src: /assets/images/20190110/ForkBlog5.PNG
+      alt: Step 1.) Click the Settings tab.
     - src: /assets/images/20190110/VerifyBlog3.PNG
-      alt: Step 3.) Select the Free plan.
-    - src: /assets/images/20190110/VerifyBlog4.PNG
-      alt: Step 4.) Select your interests.
-    - src: /assets/images/20190110/VerifyBlog5.PNG
-      alt: Step 5.) You are now ready to create a new repository.
-    - src: /assets/images/20190110/VerifyBlog6.PNG
-      alt: Step 6.) If you have an issue be sure to verify your GitHub account in your email.
-    - src: /assets/images/20190110/VerifyBlog7.PNG
-      alt: Step 7.) Create username for a GitHub account.
-    - src: /assets/images/20190110/VerifyBlog8.PNG
-      alt: Step 8.) Proove you are a person signing up for an account.
+      alt: Step 2.) Scroll down to the GitHub Pages section. You may see the site is ready to be published message. This means it's building.
     - src: /assets/images/20190110/VerifyBlog9.PNG
-      alt: Step 9.) Select the Free plan.
+      alt: Step 3.) When sucessfully build you will see a message that your site is published. Click the link to your blog.
     - src: /assets/images/20190110/VerifyBlog10.PNG
-      alt: Step 10.) Select your interests.
+      alt: Step 4.) Very your site loads and that the changes you made to the _config.yml are correct.
   settings:
     height: "'auto'"
     effect: "'fade'"
