--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,8 @@ twitter_title_image: /assets/images/header/header.jpg
 name: Aaron Ralls
 email: arkeytekllc@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-repository: "aaronralls/aaronralls.github.io"  
+repository: "aaronralls/aaronralls.github.io"
+logo: "/assets/images/logo.png"  
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://arkeytek.com" # the base hostname & protocol for your site, e.g. http://example.com
 prod_url: "https://arkeytek.com"
